--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
+    "react-lazy-load-image-component": "^1.5.4",
+    "react-loader-spinner": "^6.0.0-0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-yandex-maps": "^4.6.0",
