--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
     "react-lazy-load-image-component": "^1.5.4",
     "react-loader-spinner": "^6.0.0-0",
     "react-player": "^2.10.1",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-video-js-player": "^1.1.1",
     "react-yandex-maps": "^4.6.0",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
