--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^9.8.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-elastic-carousel": "^0.11.5",
     "react-icons": "^4.3.1",
     "react-lazy-load-image-component": "^1.5.4",
     "react-loader-spinner": "^6.0.0-0",
